# BP-Monitor-Application

./: .gitignore  AGENT.md  CLAUDE.md  PRODUCT.md  README.md  TASK.md  app.json  babel.config.js  firebase-auth-react-native.d.ts  metro.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  tsconfig.json
.claude/: settings.json
.devcontainer/: README.md  devcontainer-lock.json  devcontainer.json  post-create.sh
app/: _layout.tsx  _layout.web.tsx  about.tsx  auth.tsx  global.css  help.tsx  history-detail.tsx  (+8 more)
server/app/ai-service/: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-entrypoint.sh  main.py  pyproject.toml
server/app/ai-service/models/: EXPECTED_HASHES.json  cnn_2ch_distilled_dia_int8.onnx  cnn_2ch_distilled_global_int8.onnx  cnn_2ch_distilled_pul_int8.onnx  cnn_2ch_distilled_sys_int8.onnx
server/app/ai-service/src/ai_service/: config.py  debug_dump.py  handlers.py  main.py
server/app/ai-service/src/ai_service/analyzer/: engines.py  pipeline.py  preprocessing.py  rectify.py  types.py  validation.py  yolo.py
server/app/ai-service/src/ai_service/analyzer/ocr/: base.py  cnn_classifiers.py  crnn.py  ssocr.py
server/app/ai-service/src/ai_service/scripts/: fetch_models.py
server/app/ai-service/src/ai_service/storage/: fetch.py
server/app/ai-service/tests/: conftest.py  test_cnn_classifiers.py  test_config.py  test_crnn.py  test_debug_dump.py  test_engines.py  test_fetch.py  test_handlers.py  test_main.py  test_pipeline.py  test_rectify.py  test_validation.py  test_yolo.py
(+541 files in other folders)
